GMS-116 EOD commit: PagingDto removal